# framework-eml

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  artifacts.dvc  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: pipeline_deploy_batch.yml  pipeline_deploy_lambda.yaml  pipeline_destroy_lambda.yml  pipeline_lint.yml  pipeline_test.yml
api/: README.md
api/app/: main.py  routes.py  schemas.py
api/lambda/app/: lambda_function.py
artifacts/models/: model.joblib
config/: settings.py
config/loc/: params.yaml
deployment/docker/: Dockerfile  Dockerfile.api  Dockerfile.batch  Dockerfile.lambda
deployment/infrastructure/terraform/: ec2-iam.tf  ec2.tf  ecs-iam.tf  ecs.tf  event-bridge.tf  outputs.tf  provider.tf  variables.tf  vpc.tf
deployment/infrastructure/terraform-lambda/: api_gateway.tf  iam.tf  main.tf  outputs.tf  provider.tf  terraform.tfstate  variables.tf
deployment/scripts/: create_ecr.sh  create_infra.sh  create_infra_lambda.sh  destroy_infra_lambda.sh  push_image.sh  push_image_lambda.sh
src/pipelines/: features.py  get_data.py  predict.py  train.py
tests/: test_features.py  test_load_data.csv  test_train.py
